tests/bad/arrays/3.lat
int main () {
    boolean[] a = new int[10];
    return 0;
}